# study-pixar-usd

./: .gitignore  Pipfile  hello-usd.py  tool-list.md  usd.ipynb
cpp-example/: CMakeLists.txt  NOTE.md
cpp-example/tut-1/: main.cpp
cpp-example/tut-2-redux/: main.cpp
examples-cpp/: CMakeLists.txt  tut-1.usda  tut-3.usda
examples-cpp/cmake/: FindHoudiniUSD.cmake
examples-cpp/cmake/utils/: list_all_properties.cmake
examples-cpp/tut-1/: main.cpp
examples-cpp/tut-2/: main.cpp
examples-cpp/tut-2-redux/: main.cpp
examples-cpp/tut-3/: tut-3-internal.cpp  tut-3.cpp
examples-cpp/tut-4/: main.cpp
examples-cpp/tut-4-usd/1-sublayer-or-local/: _flatten.usd  subs.usd  world_1.usd  world_2.usd
examples-cpp/tut-4-usd/2-inherit/: _flatten.usd  inherit.usd
examples-cpp/tut-4-usd/3-variant/: aaa.usd
examples-cpp/tut-4-usd/4-reference/: _flatten.usd  reference.usd
examples-cpp/tut-4-usd/6-specializer/: Robot.usd  sameRobot.usd
examples-notebook/: usd.ipynb
examples-notebook/.ipynb_checkpoints/: usd-checkpoint.ipynb
examples-py/: hello-usd.py  nested-variants.py  readbook.py
examples-usd/Book/: Book.geom.usda  Book.usd
examples-usd/FramePicture/: FramePicture.geom.usda
examples-usd/LIVRPS/: on.usd  subs.usd
examples/LIVRPS/: over.usd
examples/LIVRPS/inherit/: Forest.usd
examples/LIVRPS/layerStack/: sequenceFX.usd  shotFX.usd
examples/LIVRPS/variant/: variant.usd
